--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -59,7 +59,13 @@
             
 </section>
 <!-- Main Carousel Section End -->
-
+<div class="icon-bar">
+    <a href="#" class="facebook"><i class="fa fa-facebook"></i></a> 
+    <a href="#" class="twitter"><i class="fa fa-twitter"></i></a> 
+    <a href="#" class="google"><i class="fa fa-google"></i></a> 
+    
+    <a href="#" class="youtube"><i class="fa fa-youtube"></i></a> 
+  </div>
 <!--Static register form Start-->
 <div class="psl_banner_registerbg">
         <!--div class="psl_banner_title">
@@ -223,25 +229,7 @@
 
 <!---floating icon-->
 
-<!-- Coundown Section Start -->
-<section class="countdown-timer section-padding">
-    <div class="container">
-        <div class="row text-center">
-            <div class="col-md-12 col-sm-12 col-xs-12">
-                <div class="heading-count">
-                    <h2 class="wow fadeInDown" data-wow-delay="0.2s">Event Will Start In</h2>
-                </div>
-            </div>
-            <div class="col-md-12 col-sm-12 col-xs-12">
-                <div class="row time-countdown justify-content-center wow fadeInUp" data-wow-delay="0.2s">
-                    <div id="clock" class="time-count"></div>
-                </div>
-                <!--a href="pricing.html" class="btn btn-common wow fadeInUp" data-wow-delay="0.3s">Add to My Calender</a-->
-            </div>
-        </div>
-    </div>
-</section>
-<!-- Coundown Section End -->
+
 
 
 
@@ -328,10 +316,10 @@
 -->
                 </div>
             </div>
-            <div style="height:100%;width:100%;text-align:center;padding:10px">
-                <a class="btn btn-common btn-rm" routerLink="/about-mission" routerLinkActive="router-link-active" href='#top'>Our Mission</a>&nbsp;&nbsp;
-                <a class="btn btn-common btn-rm" routerLink="/about-vision" routerLinkActive="router-link-active" href='#top'>Our Vision</a>&nbsp;&nbsp;
-                <a class="btn btn-common btn-rm" routerLink="/team-members" routerLinkActive="router-link-active" href='#top'>Our Team</a>&nbsp;&nbsp;
+            <div style="height:100%;width:100%;text-align:center;padding:30px">
+                <a class="btn btn-common btn-rm" style = "padding: 8px 15px;" routerLink="/about-mission" routerLinkActive="router-link-active" href='#top'>Our Mission</a>&nbsp;&nbsp;
+                <a class="btn btn-common btn-rm" style = "padding: 8px 15px;" routerLink="/about-vision" routerLinkActive="router-link-active" href='#top'>Our Vision</a>&nbsp;&nbsp;
+                <a class="btn btn-common btn-rm" style = "padding: 8px 15px;" routerLink="/team-members" routerLinkActive="router-link-active" href='#top'>Our Team</a>&nbsp;&nbsp;
             </div>
         </div>
     </div>
@@ -346,9 +334,9 @@
                         <div class="custom">
                             <h3 class="common-heading text-center">HOW TO APPLY</h3>
                             <div class="content-box">
-                                <p style="font-size: 18px;"><strong>PSL is for all poker enthusiasts who dream of greatness. It’s a free entry league that aims to provide everyone who loves poker a shot of playing the biggest poker league in India. If you are someone who lives and breaths poker, here is your chance to prove your love for the game.
-                                </strong></p>
-                                <p style="text-align: justify; font-size: 18px; padding:15px;"><strong> If you think you qualify for this criteria, Kindly select one of the option given below.</strong></p>
+                                <p style="font-size: 18px;">PSL is for all poker enthusiasts who dream of greatness. It’s a free entry league that aims to provide everyone who loves poker a shot of playing the biggest poker league in India. If you are someone who lives and breaths poker, here is your chance to prove your love for the game.
+                                </p>
+                                <p style="text-align: justify; font-size: 18px; padding:15px;"> If you think you qualify for this criteria, Kindly select one of the option given below.</p>
     
                             </div>
                             <div class="container">
@@ -449,26 +437,26 @@
 <!-- Schedule Section Start -->
 <app-event-schedule></app-event-schedule>
 <!-- Schedule Section End -->
-
 <!-- Coundown Section Start -->
 <section class="countdown-timer section-padding">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-md-12 col-sm-12 col-xs-12">
-                    <div class="heading-count">
-                        <h2 class="wow fadeInDown" data-wow-delay="0.2s">Event Will Start In</h2>
-                    </div>
-                </div>
-                <div class="col-md-12 col-sm-12 col-xs-12">
-                    <div class="row time-countdown justify-content-center wow fadeInUp" data-wow-delay="0.2s">
-                        <div id="clock" class="time-count"></div>
-                    </div>
-                    <!--a href="pricing.html" class="btn btn-common wow fadeInUp" data-wow-delay="0.3s">Add to My Calender</a-->
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="heading-count">
+                    <h2 class="wow fadeInDown" data-wow-delay="0.2s">Event Will Start In</h2>
                 </div>
             </div>
+            <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="row time-countdown justify-content-center wow fadeInUp" data-wow-delay="0.2s">
+                    <div id="clock" class="time-count"></div>
+                </div>
+                <!--a href="pricing.html" class="btn btn-common wow fadeInUp" data-wow-delay="0.3s">Add to My Calender</a-->
+            </div>
         </div>
-    </section>
-    <!-- Coundown Section End -->
+    </div>
+</section>
+<!-- Coundown Section End -->
+
     
 <!-- Team Section Start -->
 <section id="team" class="section-padding text-center">
@@ -482,69 +470,69 @@
             </div>
         </div>
         <div class="row barber-grids">
-            <div class="col-lg-3 col-sm-6 mb-lg-0 mb-5 text-center team-div">
+            <div class="col-xs-4 col-sm-3 col-md-2 mrtp-30 team-div">
                 <div class="team-grid1" routerLink="/andhra-bullets" routerLinkActive="router-link-active" href='#top'>
                     <img src="assets/img/Andhra.jpg" class="img-fluid team-img" alt="" href='#top' />
                 </div>
 
 
             </div>
-            <div class="col-lg-3 col-sm-6 mb-lg-0 mb-5 text-center team-div" alt="">
+            <div class="col-xs-4 col-sm-3 col-md-2 mrtp-30 team-div" alt="">
                 <div class="team-grid1" routerLink="/bengaluru-warriors" routerLinkActive="router-link-active">
                     <img src="assets/img/Bengaluru.jpg" class="img-fluid team-img" alt="" />
                 </div>
 
 
             </div>
-            <div class="col-lg-3 col-sm-6 mb-md-0 mb-5 text-center team-div" routerLink="/chennai-thalaivas" routerLinkActive="router-link-active">
+            <div class="col-xs-4 col-sm-3 col-md-2 mrtp-30 team-div" routerLink="/chennai-thalaivas" routerLinkActive="router-link-active">
                 <div class="team-grid1">
                     <img src="assets/img/Chennai.jpg" class="img-fluid team-img" alt="" />
                 </div>
 
             </div>
-            <div class="col-lg-3 col-sm-6 text-center team-div">
+            <div class="col-xs-4 col-sm-3 col-md-2 mrtp-30 team-div">
                 <div class="team-grid1" routerLink="/delhi-penthars" routerLinkActive="router-link-active">
                     <img src="assets/img/Delhi.jpg" class="img-fluid team-img" alt="" />
                 </div>
 
             </div>
-            <div class="col-lg-3 col-sm-6 text-center team-div" routerLink="/gujrat-falcons" routerLinkActive="router-link-active">
+            <div class="col-xs-4 col-sm-3 col-md-2 mrtp-30 team-div" routerLink="/gujrat-falcons" routerLinkActive="router-link-active">
                 <div class="team-grid1">
                     <img src="assets/img/Gujarat.jpg" class="img-fluid team-img" alt="" />
                 </div>
 
             </div>
-            <div class="col-lg-3 col-sm-6 text-center team-div" routerLink="/goan-nuts" routerLinkActive="router-link-active">
+            <div class="col-xs-4 col-sm-3 col-md-2 mrtp-30 team-div" routerLink="/goan-nuts" routerLinkActive="router-link-active">
                 <div class="team-grid1">
                     <img src="assets/img/Goa.jpg" class="img-fluid team-img" alt="" />
                 </div>
 
             </div>
-            <div class="col-lg-3 col-sm-6 text-center team-div" routerLink="/kolkata-kings" routerLinkActive="router-link-active">
+            <div class="col-xs-4 col-sm-3 col-md-2 mrtp-30 team-div" routerLink="/kolkata-kings" routerLinkActive="router-link-active">
                 <div class="team-grid1">
                     <img src="assets/img/Kolkata.jpg" class="img-fluid team-img" alt="" />
                 </div>
 
             </div>
-            <div class="col-lg-3 col-sm-6 text-center team-div" routerLink="/mumbai-anchors" routerLinkActive="router-link-active">
+            <div class="col-xs-4 col-sm-3 col-md-2 mrtp-30 team-div" routerLink="/mumbai-anchors" routerLinkActive="router-link-active">
                 <div class="team-grid1">
                     <img src="assets/img/Mumbai.jpg" class="img-fluid team-img" alt="" />
                 </div>
 
             </div>
-            <div class="col-lg-3 col-sm-6 text-center team-div" routerLink="/pune-sharks" routerLinkActive="router-link-active">
+            <div class="col-xs-4 col-sm-3 col-md-2 mrtp-30 team-div" routerLink="/pune-sharks" routerLinkActive="router-link-active">
                 <div class="team-grid1">
                     <img src="assets/img/Pune.jpg" class="img-fluid team-img" alt="" />
                 </div>
 
             </div>
-            <div class="col-lg-3 col-sm-6 text-center team-div" routerLink="/punjab-bluffers" routerLinkActive="router-link-active">
+            <div class="col-xs-4 col-sm-3 col-md-2 mrtp-30 team-div" routerLink="/punjab-bluffers" routerLinkActive="router-link-active">
                 <div class="team-grid1">
                     <img src="assets/img/Punjab.jpg" class="img-fluid team-img" alt="" />
                 </div>
 
             </div>
-            <div class="col-lg-3 col-sm-6 text-center team-div" routerLink="/rajasthan-tilters" routerLinkActive="router-link-active">
+            <div class="col-xs-4 col-sm-3 col-md-2 mrtp-30 team-div" routerLink="/rajasthan-tilters" routerLinkActive="router-link-active">
                 <div class="team-grid1">
                     <img src="assets/img/Rajasthan.jpg" class="img-fluid team-img" alt="" />
                 </div>
