--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -51,7 +51,7 @@ right: 0; ">
             <span class="icon-menu"></span>
             <span class="icon-menu"></span>
             </button>
-                <a href="index.html" class="navbar-brand"><img src="" alt=""></a>
+                <a href="index.html" class="psl"><img style="width: 10%; height: 10%;"src="" alt=""></a>
             </div>
             <div class="collapse navbar-collapse" id="main-navbar">
                 <ul class="navbar-nav mr-auto w-100 justify-content-end">
