--- a/src/styles.css
+++ b/src/styles.css
@@ -510,7 +510,7 @@ a.back-to-top:focus {
 }
 
 .section-padding {
-    padding: 60px 0;
+    padding: 25px 0;
     background: #f1e7e7bf;
 }
 
@@ -626,7 +626,10 @@ a.back-to-top:focus {
     vertical-align: middle;
     font-size: 15px;
 }
-
+.psl{
+    width: 30%;
+    
+}
 .navbar-brand {
     position: relative;
     padding: 0px;
@@ -648,7 +651,7 @@ a.back-to-top:focus {
 }
 
 .top-nav-collapse .navbar-brand {
-    top: 0px;
+    top: 0%;
 }
 
 .top-nav-collapse .navbar-nav .nav-link {
@@ -3801,3 +3804,67 @@ header.fixed .header_bottom {
     font-size: 13px;
     border-radius: 5px;
 }
+/*---sticky icons---*/
+
+.icon-bar {
+    position: fixed;
+    top: 60%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    z-index: 100;
+    right: 0%;
+
+  }
+  
+  .icon-bar a {
+    display: block;
+    text-align: center;
+    padding: 16px;
+    transition: all 0.3s ease;
+    color: white;
+    font-size: 20px;
+  }
+  
+  .icon-bar a:hover {
+    background-color: #000;
+  }
+  
+  .facebook {
+    background: #3B5998;
+    color: white;
+  }
+  
+  .twitter {
+    background: #55ACEE;
+    color: white;
+  }
+  
+  .google {
+    background: #dd4b39;
+    color: white;
+  }
+  
+  .linkedin {
+    background: #007bb5;
+    color: white;
+  }
+  
+  .youtube {
+    background: #bb0000;
+    color: white;
+  }
+  
+  .content {
+    margin-left: 75px;
+    font-size: 30px;
+  }
+  /*---sticky icons end---*/
+
+  .globlegreen{
+      color: #16253c !important;
+  }
+  .teamSec .setonBtm{
+      background:  #16253c !important;
+      color: #fff !important;
+  }
