--- a/src/app/team-members/team-members.component.html
+++ b/src/app/team-members/team-members.component.html
@@ -1,3 +1,8 @@
+<style>
+h3{
+    font-size: 25px;
+}
+</style>
 <header id="header-wrap">
     <app-navigation></app-navigation>
     <!-- Main Carousel Section Start -->
@@ -34,49 +39,46 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-6 col-md-6 col-lg-4">
+            <div class="col-sm-8 col-md-8 col-lg-4">
                 <!-- Team Item Starts -->
                 <div class="team-item wow fadeInUp" data-wow-delay="0.2s">
-                    <div class="team-img">
-                        <img class="img-fluid" src="assets/img/team/team-01.jpg" alt="">
-                        <div class="team-overlay">
-                            <div class="overlay-social-icon text-center">
-                                <ul class="social-icons">
-                                    <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="lni-behance" aria-hidden="true"></i></a></li>
-                                </ul>
-                            </div>
+                    <div class="team-img" style="max-width: 100%;">
+                        <img class="img-fluid" style="height:250px;width: 250px;max-width: 100%;" src="assets/img/team/team-01.jpg" alt="">
+                        <div class="" style="position: initial;">
+                            <h3>Pranav Bagai</h3>
+                            <p><b>CEO, Poker sports League</b></p>
+                            <p>Mr. Bagai is responsible for all operations and management of PSL .</p>
+                        </div>
+                        <div id="pranav_bagai" class="collapse" aria-labelledby="headingOne" data-parent="#headingOne">
+                            Mr. Bagai is responsible for all operations and management of PSL .
+                        </div>
+                        <div id="pranav_toggle" class="header-title" data-toggle="collapse" data-target="#pranav_bagai" aria-expanded="true" aria-controls="collapseOne" style="cursor:pointer">
+                            <span style="color:blue;">Read more</span>
                         </div>
                     </div>
-                    <div class="info-text">
-                        <h3><a href="#">Pranav Bagai</a></h3>
-                        <p>CEO, Poker sports League</p>
-                    </div>
+                    
                 </div>
                 <!-- Team Item Ends -->
             </div>
+            <div style="clear:both"></div>
             <div class="col-sm-6 col-md-6 col-lg-4">
                 <!-- Team Item Starts -->
                 <div class="team-item wow fadeInUp" data-wow-delay="0.4s">
-                    <div class="team-img">
-                        <img class="img-fluid" src="assets/img/team/sid.jpg" alt="">
-                        <div class="team-overlay">
-                            <div class="overlay-social-icon text-center">
-                                <ul class="social-icons">
-                                    <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="lni-behance" aria-hidden="true"></i></a></li>
-                                </ul>
-                            </div>
+                    <div class="team-img" style="max-width: 100%;">
+                        <img class="img-fluid" style="height:250px;width: 250px;max-width: 100%;" src="assets/img/team/sid.jpg" alt="">
+                        <div class="" style="position: initial;">
+                            <h3>Sidharth Mishra</h3>
+                            <p><b>Cheif of Producer,PSL</b></p>
+                            <p>Mr. Bagai is responsible for all operations and management of PSL .</p>
+                        </div>
+                        <div id="sid_mishra" class="collapse" aria-labelledby="headingOne" data-parent="#headingOne">
+                            Mr. Bagai is responsible for all operations and management of PSL .
+                        </div>
+                        <div id="sid_toggle" class="header-title" data-toggle="collapse" data-target="#sid_mishra" aria-expanded="true" aria-controls="collapseOne" style="cursor:pointer">
+                            <span style="color:blue;">Read more</span>
                         </div>
                     </div>
-                    <div class="info-text">
-                        <h3><a href="#">Sidharth Mishra</a></h3>
-                        <p>Cheif of Producer,PSL</p>
-                    </div>
+                   
                 </div>
                 <!-- Team Item Ends -->
             </div>
@@ -84,23 +86,21 @@
             <div class="col-sm-6 col-md-6 col-lg-4">
                 <!-- Team Item Starts -->
                 <div class="team-item wow fadeInUp" data-wow-delay="0.6s">
-                    <div class="team-img">
-                        <img class="img-fluid" src="assets/img/team/goindi.jpg" alt="">
-                        <div class="team-overlay">
-                            <div class="overlay-social-icon text-center">
-                                <ul class="social-icons">
-                                    <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="lni-behance" aria-hidden="true"></i></a></li>
-                                </ul>
-                            </div>
+                    <div class="team-img" style="max-width: 100%;">
+                        <img class="img-fluid" style="height:250px;width: 250px;max-width: 100%;" src="assets/img/team/goindi.jpg" alt="">
+                        <div class="" style="position: initial;">
+                            <h3>Abhishek Goindi</h3>
+                            <p><b>Cheif of Operations, PSL</b></p>
+                            <p>Mr. Bagai is responsible for all operations and management of PSL .</p>
+                        </div>
+                        <div id="a_g" class="collapse" aria-labelledby="headingOne" data-parent="#headingOne">
+                            Mr. Bagai is responsible for all operations and management of PSL .
+                        </div>
+                        <div id="ag_toggle" class="header-title" data-toggle="collapse" data-target="#a_g" aria-expanded="true" aria-controls="collapseOne" style="cursor:pointer">
+                            <span style="color:blue;">Read more</span>
                         </div>
                     </div>
-                    <div class="info-text">
-                        <h3><a href="#">Abhishek Goindi</a></h3>
-                        <p>Cheif of Operations, PSL</p>
-                    </div>
+                   
                 </div>
                 <!-- Team Item Ends -->
             </div>
@@ -108,22 +108,19 @@
             <div class="col-sm-6 col-md-6 col-lg-4">
                 <!-- Team Item Starts -->
                 <div class="team-item wow fadeInUp" data-wow-delay="0.8s">
-                    <div class="team-img">
-                        <img class="img-fluid" src="assets/img/team/kunaal.jpg" alt="">
-                        <div class="team-overlay">
-                            <div class="overlay-social-icon text-center">
-                                <ul class="social-icons">
-                                    <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="lni-behance" aria-hidden="true"></i></a></li>
-                                </ul>
-                            </div>
+                    <div class="team-img" style="max-width: 100%;">
+                        <img class="img-fluid"  style="height:250px;width: 250px;max-width: 100%;" src="assets/img/team/kunaal.jpg" alt="">
+                        <div class="" style="position: initial;">
+                            <h3>Kunaal Bharadwaj</h3>
+                            <p>Cheif of Marketing, PSL</p>
+                            <p>Mr. Bagai is responsible for all operations and management of PSL .</p>
                         </div>
-                    </div>
-                    <div class="info-text">
-                        <h3><a href="#">Kunaal Bharadwag</a></h3>
-                        <p>Cheif of Marketing, PSL</p>
+                        <div id="kunaal_b" class="collapse" aria-labelledby="headingOne" data-parent="#headingOne">
+                            Mr. Bagai is responsible for all operations and management of PSL .
+                        </div>
+                        <div id="kunaal_b_toggle" class="header-title" data-toggle="collapse" data-target="#kunaal_b" aria-expanded="true" aria-controls="collapseOne" style="cursor:pointer">
+                            <span style="color:blue;">Read more</span>
+                        </div>
                     </div>
                 </div>
                 <!-- Team Item Ends -->
@@ -131,46 +128,42 @@
             <div class="col-sm-6 col-md-6 col-lg-4">
                 <!-- Team Item Starts -->
                 <div class="team-item wow fadeInUp" data-wow-delay="1s">
-                    <div class="team-img">
-                        <img class="img-fluid" src="assets/img/team/kd.jpg" alt="">
-                        <div class="team-overlay">
-                            <div class="overlay-social-icon text-center">
-                                <ul class="social-icons">
-                                    <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="lni-behance" aria-hidden="true"></i></a></li>
-                                </ul>
-                            </div>
+                    <div class="team-img" style="max-width: 100%;">
+                        <img class="img-fluid" style="height:250px;width: 250px;max-width: 100%;" src="assets/img/team/kd.jpg" alt="">
+                        <div class="" style="position: initial;">
+                            <h3>Kumaresh Devendran</h3>
+                            <p><b>Head of Media, PSL</b></p>
+                            <p>Mr. Bagai is responsible for all operations and management of PSL .</p>
+                        </div>
+                        <div id="kd" class="collapse" aria-labelledby="headingOne" data-parent="#headingOne">
+                            Mr. Bagai is responsible for all operations and management of PSL .
+                        </div>
+                        <div id="kd_toggle" class="header-title" data-toggle="collapse" data-target="#kd" aria-expanded="true" aria-controls="collapseOne" style="cursor:pointer">
+                            <span style="color:blue;">Read more</span>
                         </div>
                     </div>
-                    <div class="info-text">
-                        <h3><a href="#">Kumaresh Devendran</a></h3>
-                        <p>Head of Media, PSL</p>
-                    </div>
+                    
                 </div>
                 <!-- Team Item Ends -->
             </div>
             <div class="col-sm-6 col-md-6 col-lg-4">
                 <!-- Team Item Starts -->
                 <div class="team-item wow fadeInUp" data-wow-delay="1.2s">
-                    <div class="team-img">
-                        <img class="img-fluid" src="assets/img/team/manish.jpg" alt="">
-                        <div class="team-overlay">
-                            <div class="overlay-social-icon text-center">
-                                <ul class="social-icons">
-                                    <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="lni-behance" aria-hidden="true"></i></a></li>
-                                </ul>
-                            </div>
+                    <div class="team-img" style="max-width: 100%;">
+                        <img class="img-fluid" style="max-width: 100%;height:250px;width: 250px;" src="assets/img/team/manish.jpg" alt="">
+                        <div class="" style="position: initial;">
+                            <h3>Manish Takade</h3>
+                            <p>Video Editor, PSL</p>
+                            <p>Mr. Bagai is responsible for all operations and management of PSL .</p>
+                        </div>
+                        <div id="manish_t" class="collapse" aria-labelledby="headingOne" data-parent="#headingOne">
+                            Mr. Bagai is responsible for all operations and management of PSL .
+                        </div>
+                        <div id="manish_t_toggle" class="header-title" data-toggle="collapse" data-target="#manish_t" aria-expanded="true" aria-controls="collapseOne" style="cursor:pointer">
+                            <span style="color:blue;">Read more</span>
                         </div>
                     </div>
-                    <div class="info-text">
-                        <h3><a href="#">Manish Takade</a></h3>
-                        <p>UI Designer, Apple</p>
-                    </div>
+                   
                 </div>
                 <!-- Team Item Ends -->
             </div>
