--- a/src/app/event-schedule/event-schedule.component.html
+++ b/src/app/event-schedule/event-schedule.component.html
@@ -395,7 +395,7 @@
                         <div id="accordion">
                             <div class="card">
                                 <div id="headingOne">
-                                    <div class="collapsed card-header" data-toggle="collapse" data-target="#collapseOne"
+                                    <div class="collapsed card-header" data-toggle="collapse" data-target="#collapseOneFinale"
                                         aria-expanded="false" aria-controls="collapseOne">
                                         <div class="images-box">
                                             <img class="img-fluid" src="assets/img/speaker/speakers-1.jpg" alt="">
@@ -405,7 +405,7 @@
 
                                     </div>
                                 </div>
-                                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
+                                <div id="collapseOneFinale" class="collapse show" aria-labelledby="headingOne"
                                     data-parent="#accordion">
                                     <div class="card-body">
                                         <p>Final of Poker Sports League</p>
