--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -212,7 +212,7 @@
 <!-- Header Area wrapper End -->
 
 <!--Popup banner div start-->
-<div style="display:block;opacity:0;transition: 3000ms all;z-index:100000000000000000000000000" id="div_popupbanner">
+<div style="display:none;opacity:0;transition: 3000ms all;z-index:100000000000000000000000000" id="div_popupbanner">
     <app-popup-banner></app-popup-banner>
 </div>
 <!--Popup banner div end-->
@@ -241,7 +241,7 @@
             <div class="col-12">
                 <div class="section-title-header text-center">
                     <h1 class="section-title wow fadeInUp" data-wow-delay="0.2s">About Us</h1>
-                    <p class="wow fadeInDown" data-wow-delay="0.2s">The idea behind Poker Sports League, is to sportify the game. To Introduce a league for team-based poker, the first and only of its kind. To provide an Arena which is fair and accessible to all. To provide a stage where the best, Nationally and Internationally can bring out the big guns and duke it out for the Glory. We have big prize pools, no entry fee and a hell of  competition ahead. The league’s only aim is to grow the game. To take it to heights previously unheard of. And you can rest assured we will leave no stone unturned while doing that. </p>
+                    <p class="wow fadeInDown" data-wow-delay="0.2s">The idea behind Poker Sports League, is to sportify the game. To Introduce a league for team-based poker, the first and only of its kind. To provide an Arena which is fair and accessible to all. To provide a stage where the best, Nationally and Internationally can bring out the big guns and duke it out for the Glory. We have big prize pools, no entry fee and a hell of  competition ahead. The league's only aim is to grow the game. To take it to heights previously unheard of. And you can rest assured we will leave no stone unturned while doing that. </p>
                     <h3 class=" wow fadeInUp" data-wow-delay="0.2s">Meet The Team</h3>
                 </div>
             </div>
