--- a/src/app/faqs/faqs.component.html
+++ b/src/app/faqs/faqs.component.html
@@ -306,12 +306,12 @@
                                     <div class="card">
                                             <div class="card-header" id="headingEleven11">
                                                 <div class="header-title" data-toggle="collapse" data-target="#questionEleven11" aria-expanded="false" aria-controls="questionEleven11">
-                                                        <i class="lni-pencil"></i> Loreal Impsum 
+                                                        <i class="lni-pencil"></i> Which variants of Poker game will be there in league?
                                                 </div>
                                                 </div>
                                             <div id="questionEleven11" class="collapse" aria-labelledby="headingEleven11" data-parent="#question">
                                                 <div class="card-body">
-                                                        Wildcard is a player who doesn’t have to qualify. Who is added to the team in hopes of giving them the X factor. They can be an international celebrity or a legendary Pro. They are chosen completely at the team’s discretion. They can be players who bring great leadership qualities, a great sense of camaraderie or just aggressive everything but the kitchen sink skills!. They cannot be a part of the current draft though.  
+                                                        The poker will be of Texas Holdem Variant.
                                                 </div>
                                             </div>
                                     </div>
