--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -41,7 +41,8 @@ right: 0; ">
 
 <!-- Navbar Bottom header Start -->
     <div style="float: left;width: 100%;" class="navbar navbar-expand-lg  scrolling-navbar">
-        
+        <div class="icon-logo" ><a href="/index.html" ><img style=" max-width: 100%;max-height: 100%;" src="assets/img/PSL_final.png"></a></div>
+       
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
