--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -220,7 +220,7 @@
 <!---floating icon-->
 <div id="mySidenav" class="sidenav">
     <div class="">
-        <a href="javascript:void(0);" class="nav-reg-btn levitate" (click)="togglereg()" id="reg">Register Now </a>
+        <a href="javascript:void(0);" class="nav-reg-btn levitate" style="padding: 8px 6px; font-size: 15px; color: #061d40" (click)="togglereg()" id="reg"><strong>REGISTER</strong></a>
     </div>
 </div>
 <div style="display:none" id="divreg" class="toggle-form">
@@ -723,7 +723,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="site-info">
-                    <p>© Poker Sports League</p>
+                    <p>ï¿½ Poker Sports League</p>
                 </div>
             </div>
         </div>
