--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -659,7 +659,7 @@
         <div class="row mb-30 text-center wow fadeInDown" data-wow-delay="0.3s">
             <div class="col-md-3 col-sm-3 col-xs-12">
                 <div class="spnsors-logo" style="height: 90%; padding: 60px 5px;">
-                    <a href="https://www.adda52.com" target="_blank"><img class="img-fluid" src="assets/img/sponsors/adda.png" alt=""></a>
+                    <a href="javascript:void(0)" ><img class="img-fluid" src="assets/img/sponsors/adda.png" alt=""></a>
                 </div>
             </div>
             <div class="col-md-3 col-sm-3 col-xs-12">
