--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -1,7 +1,18 @@
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 800px) {
 	.icon-logo{
 		display:none;
 	}
+
+	.navbar {
+        background: none;
+    }
+
+    .psl_contact_info {
+        display: none;
+	}
+	
+	.head_right {
+		padding: 5px 10px;
 } 
 
 @media only screen and (min-width: 700px) {
