--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -290,7 +290,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="col-xs-12 col-md-6 col-lg-4" id="amit_b_abt">
                 <div class="about-item">
                     <img class="img-fluid" src="https://www.dabur.com/img/article/11-mr.-amit-burman.jpg" style="width:100%;height:250px" alt="">
                     <div class="card">
@@ -314,7 +314,7 @@
 -->
                 </div>
             </div>
-            <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="col-xs-12 col-md-6 col-lg-4" id="pranav_b_abt">
                 <div class="about-item">
                     <img class="img-fluid" src="assets/img/team/team-01.jpg" style="width: 100%;height:250px" alt="">
                     <div class="card">
@@ -337,7 +337,7 @@
 -->
                 </div>
             </div>
-            <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="col-xs-12 col-md-6 col-lg-4" id="a_g_abt">
                 <div class="about-item">
                     <img class="img-fluid" src="assets/img/team/goindi.jpg" style="width: 100%;height:250px" alt="">
                     <div class="card">
@@ -766,7 +766,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="site-info">
-                    <p>Â© Poker Sports League</p>
+                    <p>© Poker Sports League</p>
                 </div>
             </div>
         </div>
