--- a/src/styles.css
+++ b/src/styles.css
@@ -2690,7 +2690,7 @@ a.back-to-top:focus {
 
 .psl_banner_registerbg {
 	position: absolute;
-	top: 50%;
+	top: 360px;
 	left: 8%;
 	-ms-transform: translate(0, -50%);
 	-o-transform: translate(0, -50%);
